// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomSlippageModal confirm button is disabled when shouldDisableConfirm is true: confirm button disabled 1`] = `
<View
  testID="bottom-sheet"
>
  <View
    testID="header-center"
  >
    <Text>
      Slippage
    </Text>
    <TouchableOpacity
      accessibilityLabel="Close"
      onPress={[Function]}
    >
      <Text>
        Close
      </Text>
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      testID="input-stepper"
    >
      <TouchableOpacity
        onPress={[Function]}
        testID="input-stepper-decrease"
      >
        <Text>
          -
        </Text>
      </TouchableOpacity>
      <Text
        testID="input-stepper-value"
      >
        0
      </Text>
      <TouchableOpacity
        onPress={[Function]}
        testID="input-stepper-increase"
      >
        <Text>
          +
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      testID="keypad"
    >
      <Text
        testID="keypad-value"
      >
        0
      </Text>
      <TouchableOpacity
        onPress={[Function]}
        testID="keypad-button-5"
      >
        <Text>
          5
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "space-around",
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "flex": 0.5,
        }
      }
    >
      <View
        accessibilityLabel="Cancel"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#b4b4b528",
              "borderColor": "transparent",
              "borderRadius": 12,
              "borderWidth": 1,
              "columnGap": 8,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 80,
              "opacity": 1,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "100%",
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#131416",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Cancel
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flex": 0.5,
        }
      }
    >
      <View
        accessibilityLabel="Confirm"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#131416",
              "borderRadius": 12,
              "columnGap": 8,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 80,
              "opacity": 0.5,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "100%",
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#ffffff",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Confirm
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`CustomSlippageModal confirm button is enabled when shouldDisableConfirm is false: confirm button enabled 1`] = `
<View
  testID="bottom-sheet"
>
  <View
    testID="header-center"
  >
    <Text>
      Slippage
    </Text>
    <TouchableOpacity
      accessibilityLabel="Close"
      onPress={[Function]}
    >
      <Text>
        Close
      </Text>
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      testID="input-stepper"
    >
      <TouchableOpacity
        onPress={[Function]}
        testID="input-stepper-decrease"
      >
        <Text>
          -
        </Text>
      </TouchableOpacity>
      <Text
        testID="input-stepper-value"
      >
        0
      </Text>
      <TouchableOpacity
        onPress={[Function]}
        testID="input-stepper-increase"
      >
        <Text>
          +
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      testID="keypad"
    >
      <Text
        testID="keypad-value"
      >
        0
      </Text>
      <TouchableOpacity
        onPress={[Function]}
        testID="keypad-button-5"
      >
        <Text>
          5
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "space-around",
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "flex": 0.5,
        }
      }
    >
      <View
        accessibilityLabel="Cancel"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#b4b4b528",
              "borderColor": "transparent",
              "borderRadius": 12,
              "borderWidth": 1,
              "columnGap": 8,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 80,
              "opacity": 1,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "100%",
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#131416",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Cancel
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flex": 0.5,
        }
      }
    >
      <View
        accessibilityLabel="Confirm"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#131416",
              "borderRadius": 12,
              "columnGap": 8,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 80,
              "opacity": 1,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "100%",
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#ffffff",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Confirm
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`CustomSlippageModal snapshot tests matches snapshot for complete modal 1`] = `
<View
  testID="bottom-sheet"
>
  <View
    testID="header-center"
  >
    <Text>
      Slippage
    </Text>
    <TouchableOpacity
      accessibilityLabel="Close"
      onPress={[Function]}
    >
      <Text>
        Close
      </Text>
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      testID="input-stepper"
    >
      <TouchableOpacity
        onPress={[Function]}
        testID="input-stepper-decrease"
      >
        <Text>
          -
        </Text>
      </TouchableOpacity>
      <Text
        testID="input-stepper-value"
      >
        0
      </Text>
      <TouchableOpacity
        onPress={[Function]}
        testID="input-stepper-increase"
      >
        <Text>
          +
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      testID="keypad"
    >
      <Text
        testID="keypad-value"
      >
        0
      </Text>
      <TouchableOpacity
        onPress={[Function]}
        testID="keypad-button-5"
      >
        <Text>
          5
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "space-around",
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "flex": 0.5,
        }
      }
    >
      <View
        accessibilityLabel="Cancel"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#b4b4b528",
              "borderColor": "transparent",
              "borderRadius": 12,
              "borderWidth": 1,
              "columnGap": 8,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 80,
              "opacity": 1,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "100%",
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#131416",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Cancel
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flex": 0.5,
        }
      }
    >
      <View
        accessibilityLabel="Confirm"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#131416",
              "borderRadius": 12,
              "columnGap": 8,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 80,
              "opacity": 1,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "100%",
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#ffffff",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Confirm
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`CustomSlippageModal snapshot tests matches snapshot with confirm disabled 1`] = `
<View
  testID="bottom-sheet"
>
  <View
    testID="header-center"
  >
    <Text>
      Slippage
    </Text>
    <TouchableOpacity
      accessibilityLabel="Close"
      onPress={[Function]}
    >
      <Text>
        Close
      </Text>
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      testID="input-stepper"
    >
      <TouchableOpacity
        onPress={[Function]}
        testID="input-stepper-decrease"
      >
        <Text>
          -
        </Text>
      </TouchableOpacity>
      <Text
        testID="input-stepper-value"
      >
        0
      </Text>
      <TouchableOpacity
        onPress={[Function]}
        testID="input-stepper-increase"
      >
        <Text>
          +
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      testID="keypad"
    >
      <Text
        testID="keypad-value"
      >
        0
      </Text>
      <TouchableOpacity
        onPress={[Function]}
        testID="keypad-button-5"
      >
        <Text>
          5
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "space-around",
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "flex": 0.5,
        }
      }
    >
      <View
        accessibilityLabel="Cancel"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#b4b4b528",
              "borderColor": "transparent",
              "borderRadius": 12,
              "borderWidth": 1,
              "columnGap": 8,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 80,
              "opacity": 1,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "100%",
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#131416",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Cancel
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flex": 0.5,
        }
      }
    >
      <View
        accessibilityLabel="Confirm"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#131416",
              "borderRadius": 12,
              "columnGap": 8,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 80,
              "opacity": 0.5,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "100%",
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#ffffff",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Confirm
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`CustomSlippageModal snapshot tests matches snapshot with description shown 1`] = `
<View
  testID="bottom-sheet"
>
  <View
    testID="header-center"
  >
    <Text>
      Slippage
    </Text>
    <TouchableOpacity
      accessibilityLabel="Close"
      onPress={[Function]}
    >
      <Text>
        Close
      </Text>
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      testID="input-stepper"
    >
      <TouchableOpacity
        onPress={[Function]}
        testID="input-stepper-decrease"
      >
        <Text>
          -
        </Text>
      </TouchableOpacity>
      <Text
        testID="input-stepper-value"
      >
        0
      </Text>
      <TouchableOpacity
        onPress={[Function]}
        testID="input-stepper-increase"
      >
        <Text>
          +
        </Text>
      </TouchableOpacity>
      <View
        testID="input-stepper-description"
      />
    </View>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      testID="keypad"
    >
      <Text
        testID="keypad-value"
      >
        0
      </Text>
      <TouchableOpacity
        onPress={[Function]}
        testID="keypad-button-5"
      >
        <Text>
          5
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "space-around",
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "flex": 0.5,
        }
      }
    >
      <View
        accessibilityLabel="Cancel"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#b4b4b528",
              "borderColor": "transparent",
              "borderRadius": 12,
              "borderWidth": 1,
              "columnGap": 8,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 80,
              "opacity": 1,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "100%",
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#131416",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Cancel
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flex": 0.5,
        }
      }
    >
      <View
        accessibilityLabel="Confirm"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#131416",
              "borderRadius": 12,
              "columnGap": 8,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 80,
              "opacity": 1,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "100%",
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#ffffff",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Confirm
        </Text>
      </View>
    </View>
  </View>
</View>
`;
